deployments/captive-portal/captive-portal.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: captive-portal
  namespace: home-automation
  labels:
    app.kubernetes.io/name: captive-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: captive-portal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: captive-portal
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: captive-portal
          image: docker-registry/captive-portal:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
