deployments/captive-portal/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: captive-portal
  namespace: default
  labels:
    app.kubernetes.io/name: captive-portal
spec:
  type: NodePort
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: captive-portal
