deployments/captive-portal/ingress-staging.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: captive-portal
  namespace: default
spec:
  tls:
    - hosts:
        - $CAPTIVE_PORTAL_DOMAIN
      secretName: captive-portal-tls
  rules:
    - host: $CAPTIVE_PORTAL_DOMAIN
      http:
        paths:
          - path: "/"
            backend:
              serviceName: captive-portal
              servicePort: 80
